[package]
name = "discourse_crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
ctrlc = "3.2"
clap = { version = "4.5.4", features = ["derive"] }

[features]
latest = []
raw = []
boost-start = []
